Attempt to add google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,9 @@ disqus:
     # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
     shortname: robs-blog-3
 
+site:
+  google_analytics: UA-169408713-1
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
