Backed out banner path

--- a/_config.landscape.yml
+++ b/_config.landscape.yml
@@ -3,7 +3,7 @@ menu:
   Home: /
   Archives: /archives
 rss: /atom.xml
-banner: blog/images/brighton-beach.jpg
+banner: images/brighton-beach.jpg
 subtitle: ''
 
 # Content
